Added Error handling

--- a/API_Server/src/main/resources/application.properties
+++ b/API_Server/src/main/resources/application.properties
@@ -8,3 +8,20 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+
+# Azure Function URL
+azure.function.url=http://localhost:7071/api/MarketDataFunction
+
+# WebClient timeout settings (milliseconds)
+webclient.timeout.connect=5000
+webclient.timeout.read=10000
+
+# Cache configuration (60 seconds TTL, max 100 entries)
+spring.cache.type=caffeine
+spring.cache.caffeine.spec=maximumSize=100,expireAfterWrite=60s
+
+# Circuit Breaker configuration
+resilience4j.circuitbreaker.instances.marketData.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.marketData.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.marketData.waitDurationInOpenState=30s
+resilience4j.circuitbreaker.instances.marketData.permittedNumberOfCallsInHalfOpenState=3
