Added error handling for the azure function

--- a/API_Server/src/main/resources/application.properties
+++ b/API_Server/src/main/resources/application.properties
@@ -1,13 +1,19 @@
 spring.application.name=API_Server
 
-# PostgreSQL Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/marketmonitor
-spring.datasource.username=sunny
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
+# Local PostgreSQL Database Configuration
+spring.datasource.local.url=jdbc:postgresql://localhost:5432/marketmonitor
+spring.datasource.local.username=sunny
+spring.datasource.local.password=${DB_PASSWORD}
+spring.datasource.local.driver-class-name=org.postgresql.Driver
+
+# Supabase PostgreSQL Database Configuration
+spring.datasource.supabase.url=jdbc:postgresql://${SUPABASE_HOST}:5432/postgres
+spring.datasource.supabase.username=postgres
+spring.datasource.supabase.password=${SUPABASE_PASSWORD}
+spring.datasource.supabase.driver-class-name=org.postgresql.Driver
+
+# JPA Configuration (applied per-datasource in config classes)
+spring.jpa.open-in-view=false
 
 # Azure Function URL
 azure.function.url=http://localhost:7071/api/MarketDataFunction
