Added Rate Limiting for the spingboot app

--- a/API_Server/src/main/resources/application.properties
+++ b/API_Server/src/main/resources/application.properties
@@ -31,3 +31,8 @@ resilience4j.circuitbreaker.instances.marketData.slidingWindowSize=10
 resilience4j.circuitbreaker.instances.marketData.failureRateThreshold=50
 resilience4j.circuitbreaker.instances.marketData.waitDurationInOpenState=30s
 resilience4j.circuitbreaker.instances.marketData.permittedNumberOfCallsInHalfOpenState=3
+
+# Rate Limiter configuration (10 requests per second)
+resilience4j.ratelimiter.instances.marketDataApi.limitForPeriod=10
+resilience4j.ratelimiter.instances.marketDataApi.limitRefreshPeriod=1s
+resilience4j.ratelimiter.instances.marketDataApi.timeoutDuration=0s
